Click or tap > Select

--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -147,7 +147,7 @@
 	</p>
 	<p>UMD edition &middot; <a href="https://github.com/famebot/chromagen">Source code on GitHub</a></p>
 	<h2>Colors</h2>
-	<p>Click or tap a swatch top copy the HSL value to your clipboard.</p>
+	<p>Select a swatch top copy the HSL value to your clipboard.</p>
 	<ul class="swatches">
 		<li>
 			<figure>
