darker toast text

--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -175,7 +175,7 @@
 		div:where(.swal2-container) h2:where(.swal2-title) {
 			background-color: rgba(255,255,255,0.5);
 			border-radius: 0 0 5px 5px;
-			color: var(--huedark) !important;
+			color: var(--huedarker) !important;
 			padding: .4em 1em .4em !important;
 		}
 	</style>
