example/readme upd social img from 16:9 to 2:1 for gh

--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -2,7 +2,7 @@
 	<title>Chromagen</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"> 
 	<meta name="theme-color" content="navy">
-	<meta data-rh="true" property="og:image" content="https://chromagen.io/chromagen.jpg"/>
+	<meta data-rh="true" property="og:image" content="https://chromagen.io/chromagen.png"/>
 	<style>
 		:root {
 			--huexlight: aliceblue;
