--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -144,6 +144,7 @@
 			width: var(--swatch-size);
 			margin: 0 auto;
 			transition-property: background-color;
+			box-shadow: 0 0 12px -8px rgba(0, 0, 0, 0.625);
 		}
 		.swatches figcaption {
 			margin-top: 0.5rem;
