add border radius to swatches

--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -144,6 +144,7 @@
 			width: var(--swatch-size);
 			margin: 0 auto;
 			transition-property: background-color;
+			border-radius: 16.75px;
 			box-shadow: 0 1px 12px -8px rgba(0, 0, 0, 0.75);
 		}
 		.swatches figcaption {
