--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -145,7 +145,12 @@
 			margin: 0 auto;
 			transition-property: background-color;
 			border-radius: 16.75px;
-			box-shadow: 0 1px 12px -8px rgba(0, 0, 0, 0.75);
+			box-shadow: 0.7px 0.7px 1.1px rgba(0, 0, 0, 0.07),
+						1.6px 1.6px 2.7px rgba(0, 0, 0, 0.05),
+						3px 3px 5px rgba(0, 0, 0, 0.042),
+						5.4px 5.4px 8.9px rgba(0, 0, 0, 0.035),
+						10px 10px 16.7px rgba(0, 0, 0, 0.028),
+						24px 24px 40px rgba(0, 0, 0, 0.02);
 		}
 		.swatches figcaption {
 			margin-top: 0.5rem;
